syntax = "proto3";

option csharp_namespace = "AuthService.Protos";

package AuthService.Protos;

service AuthService {
    rpc CheckPermission(CheckPermissionRequest) returns (CheckPermissionResponse);
    rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse);
}

message CheckPermissionRequest
{
  string objectId = 1;
  int32 action = 2;
  string theme = 3;
}

message CheckPermissionResponse {
  bool isAllowed = 1;
}

message VerifyTokenRequest {
  string token = 1;
}

message VerifyTokenResponse {
  bool isValid = 1;
  repeated Claim claims = 2;
}

message Claim {
  string type = 1;
  string value = 2;
}